# smile2dock

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASE_DRAFT.md  environment.yml  pyproject.toml  requirements.txt  setup.py  smi2dock.py  smile2dock.py  smile2dock_v2.py  smile2dock_v3.py  smile2dock_v3_GNNimplicitsolvent.py
.github/workflows/: ci.yml  conda-lock.yml  publish.yml  python-publish.yml  release.yaml
examples/: README.md
examples/batch_mol/: clean.sh  test.sh  test.smi
examples/batch_mol_tani/: clean.sh  test.sh  test.smi
examples/single_mol/: .mol2  .pdbqt  .sdf  test.sh
examples/single_mol_tani/: test.sh
misc_scripts/: protonate_smiles.py  smile2prop.py
obsolete_files/: smile2dock.py
tests/: __init__.py  run_tests.py  test_smile2dock.py
update_patch/: v2_update.patch
