[build-system]
requires = ["setuptools>=61.0", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "smile2dock"
version = "3.1.0"
description = "Convert SMILES to 3D structures with optional GNN implicit-solvent minimization"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICENSE"]
authors = [ { name = "elvismartis" } ]
keywords = ["chemistry", "smiles", "rdkit", "docking", "molecular-modeling"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
]

dependencies = [
  "numpy>=1.20",
  "dimorphite-dl>=1.3.0",
  "openbabel>=3.1.1",
  "rdkit-pypi>=2022.9.5",
  "tqdm>=4.0",
  "scikit-learn>=1.0",
  "mdtraj>=1.9.5",
  "pyyaml>=5.4",
]

[project.optional-dependencies]
gnn = [
  "torch>=1.10",
  "torch-geometric",
  "openmm>=7.6",
  "openff-toolkit>=0.12.0",
  "GNNImplicitSolvent @ git+https://github.com/fjclark/GNNImplicitSolvent.git",
]
dev = [
  "pytest>=7.0",
  "black",
  "isort",
  "flake8",
  "build",
]

[project.scripts]
smile2dock = "smile2dock_v3:main"
smile2dock-gnn = "smile2dock_v3_GNNimplicitsolvent:main"

[tool.setuptools.packages]
find = {}
