[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smile2dock"
version = "3.1.0"
description = "SMILES-to-3D Molecular Format Converter"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Elvis Martis", email = "elvis.afmartis@gmail.com"},
    {name = "Stéphane Téletchéa", email= "stephane.teletchea@univ-nantes.fr"}
]
keywords = ["SMILES", "molecular-format", "3D-structure", "RDKit", "chemistry"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "rdkit>=2022.09",
    "openbabel-wheel>=3.1.1",
    "dimorphite-dl>=1.3",
    "numpy>=1.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
]


[project.urls]
"Homepage" = "https://github.com/elvismartis/smile2dock"
"Bug Tracker" = "https://github.com/elvismartis/smile2dock/issues"
"Changelog" = "https://github.com/elvismartis/smile2dock/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = ["smile2dock"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.ruff]
line-length = 100
target-version = "py38"