[build-system]
requires = [
    "setuptools",
    "some-build-toolkit",
]
build-backend = "setuptools.build_meta"

[project]
name = "smile2dock"
version = "1.0"
description = "SMILES-to-3D Molecular Format Converter"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Elvis Martis", email = "elvis.afmartis@gmail.com"},
    {name = "Stéphane Téletchéa", email = "stephane.teletchea@univ-nantes.fr"}
]
keywords = ["SMILES", "molecular-format", "3D-structure", "RDKit", "chemistry", "molecular-docking"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "rdkit>=2022.09",
    "openbabel-wheel>=3.1.1",
    "dimorphite-dl>=1.3",
    "numpy>=1.21",
]

[project.urls]
"Homepage" = "https://github.com/elvismartis/smile2dock"
"Bug Tracker" = "https://github.com/elvismartis/smile2dock/issues"
"Changelog" = "https://github.com/elvismartis/smile2dock/blob/main/CHANGELOG.md"
"Documentation" = "https://github.com/elvismartis/smile2dock#readme"

[tool.setuptools]
packages = ["smile2dock"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

line-length = 100
target-version = "py38"
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # Black handles line length
exclude = [".git", ".venv", "build", "dist"]

known-first-party = ["smile2dock"]

[tool.coverage.run]
branch = true
source = ["smile2dock"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
